Added a poor unit test

--- a/src/Sandwych.Compression.Demo/Sandwych.Compression.Demo.csproj
+++ b/src/Sandwych.Compression.Demo/Sandwych.Compression.Demo.csproj
@@ -2,8 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+    <DefineConstants>TRACE;DEBUG;NETCOREAPP2_0</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Sandwych.Compression\Sandwych.Compression.csproj" />
