--- a/Sandwych.Compression.Tests/Sandwych.Compression.Tests.csproj
+++ b/Sandwych.Compression.Tests/Sandwych.Compression.Tests.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\src\Sandwych.Compression\Sandwych.Compression.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Algorithms\Bwt\" />
+  </ItemGroup>
+
 </Project>
